// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderPhp matches the snapshot for multi-version.json 1`] = `
"=== HtEvents.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

use Hightouch\\Client;

final class HtEvents
{
    /** @param mixed $value
     * @return mixed
     */
    private static function toValue($value)
    {
        if (is_object($value)) {
            return self::toMap($value);
        }
        if (is_array($value)) {
            $out = [];
            foreach ($value as $k => $v) {
                if ($v === null) {
                    continue;
                }
                $out[$k] = self::toValue($v);
            }
            return $out;
        }
        return $value;
    }

    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        // Explicit JSON null is unsendable; omit unset / null fields.
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return self::toValue($value);
        }
        $out = [];
        foreach ((new \\ReflectionObject($value))->getProperties() as $prop) {
            if ($prop->isStatic()) {
                continue;
            }
            $prop->setAccessible(true);
            $val = $prop->getValue($value);
            if ($val === null) {
                continue;
            }
            $key = $prop->getName();
            $doc = $prop->getDocComment() ?: '';
            if (preg_match('/@JsonName\\("([^"]+)"\\)/', $doc, $match) === 1) {
                $key = stripcslashes($match[1]);
            }
            $out[$key] = self::toValue($val);
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === 'context') {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    /**
     * @param array<string, mixed> $message
     * @param array<string, mixed> $options
     * @param array<string, mixed>|null $context
     * @return array<string, mixed>
     */
    private static function withOptionalFields(array $message, array $options, ?array $context): array
    {
        if (array_key_exists('anonymousId', $options)) {
            $message['anonymousId'] = $options['anonymousId'];
        }
        if (array_key_exists('timestamp', $options)) {
            $message['timestamp'] = $options['timestamp'];
        }
        if (array_key_exists('integrations', $options)) {
            $message['integrations'] = $options['integrations'];
        }
        if ($context !== null) {
            $message['context'] = $context;
        }
        return $message;
    }

    public static function trackOrderCompletedV1(Client $client, string $userId, TrackOrderCompletedV1 $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, 'v1', 'properties');
        $client->track(self::withOptionalFields([
            'userId' => $userId,
            'event' => 'Order Completed',
            'properties' => $data,
        ], $options, $ctx));
    }

    public static function trackOrderCompletedV2(Client $client, string $userId, TrackOrderCompletedV2 $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, 'v2', 'properties');
        $client->track(self::withOptionalFields([
            'userId' => $userId,
            'event' => 'Order Completed',
            'properties' => $data,
        ], $options, $ctx));
    }

    public static function trackOrderCompleted(Client $client, string $userId, TrackOrderCompletedV2 $properties, array $options = []): void
    {
        self::trackOrderCompletedV2($client, $userId, $properties, $options);
    }
}


=== TrackOrderCompletedV1.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

class TrackOrderCompletedV1 {
    /** @var mixed */
    public $orderId;
}


=== TrackOrderCompletedV2.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

class TrackOrderCompletedV2 {
    /** @var mixed */
    public $orderId;
    /** @var mixed */
    public $total;
}
"
`;

exports[`renderPhp matches the snapshot for simple-track.json 1`] = `
"=== HtEvents.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

use Hightouch\\Client;

final class HtEvents
{
    /** @param mixed $value
     * @return mixed
     */
    private static function toValue($value)
    {
        if (is_object($value)) {
            return self::toMap($value);
        }
        if (is_array($value)) {
            $out = [];
            foreach ($value as $k => $v) {
                if ($v === null) {
                    continue;
                }
                $out[$k] = self::toValue($v);
            }
            return $out;
        }
        return $value;
    }

    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        // Explicit JSON null is unsendable; omit unset / null fields.
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return self::toValue($value);
        }
        $out = [];
        foreach ((new \\ReflectionObject($value))->getProperties() as $prop) {
            if ($prop->isStatic()) {
                continue;
            }
            $prop->setAccessible(true);
            $val = $prop->getValue($value);
            if ($val === null) {
                continue;
            }
            $key = $prop->getName();
            $doc = $prop->getDocComment() ?: '';
            if (preg_match('/@JsonName\\("([^"]+)"\\)/', $doc, $match) === 1) {
                $key = stripcslashes($match[1]);
            }
            $out[$key] = self::toValue($val);
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === 'context') {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    /**
     * @param array<string, mixed> $message
     * @param array<string, mixed> $options
     * @param array<string, mixed>|null $context
     * @return array<string, mixed>
     */
    private static function withOptionalFields(array $message, array $options, ?array $context): array
    {
        if (array_key_exists('anonymousId', $options)) {
            $message['anonymousId'] = $options['anonymousId'];
        }
        if (array_key_exists('timestamp', $options)) {
            $message['timestamp'] = $options['timestamp'];
        }
        if (array_key_exists('integrations', $options)) {
            $message['integrations'] = $options['integrations'];
        }
        if ($context !== null) {
            $message['context'] = $context;
        }
        return $message;
    }

    public static function trackOrderCompletedDefault(Client $client, string $userId, TrackOrderCompletedDefault $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, ['context', 'protocols', 'schemaVersion'], 'default', 'properties');
        $client->track(self::withOptionalFields([
            'userId' => $userId,
            'event' => 'Order Completed',
            'properties' => $data,
        ], $options, $ctx));
    }

    public static function trackOrderCompleted(Client $client, string $userId, TrackOrderCompletedDefault $properties, array $options = []): void
    {
        self::trackOrderCompletedDefault($client, $userId, $properties, $options);
    }
}


=== TrackOrderCompletedDefault.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

class TrackOrderCompletedDefault {
    /** @var mixed */
    public $orderId;
    /** @var mixed */
    public $total;
}
"
`;

exports[`renderPhp matches the snapshot for with-refs.json 1`] = `
"=== HtEvents.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

use Hightouch\\Client;

final class HtEvents
{
    /** @param mixed $value
     * @return mixed
     */
    private static function toValue($value)
    {
        if (is_object($value)) {
            return self::toMap($value);
        }
        if (is_array($value)) {
            $out = [];
            foreach ($value as $k => $v) {
                if ($v === null) {
                    continue;
                }
                $out[$k] = self::toValue($v);
            }
            return $out;
        }
        return $value;
    }

    /** @param mixed $value
     * @return array<string, mixed>
     */
    private static function toMap($value): array
    {
        // Explicit JSON null is unsendable; omit unset / null fields.
        if ($value === null) {
            return [];
        }
        if (is_array($value)) {
            return self::toValue($value);
        }
        $out = [];
        foreach ((new \\ReflectionObject($value))->getProperties() as $prop) {
            if ($prop->isStatic()) {
                continue;
            }
            $prop->setAccessible(true);
            $val = $prop->getValue($value);
            if ($val === null) {
                continue;
            }
            $key = $prop->getName();
            $doc = $prop->getDocComment() ?: '';
            if (preg_match('/@JsonName\\("([^"]+)"\\)/', $doc, $match) === 1) {
                $key = stripcslashes($match[1]);
            }
            $out[$key] = self::toValue($val);
        }
        return $out;
    }

    /**
     * @param array<string, mixed> $root
     * @param list<string> $path
     * @return array<string, mixed>
     */
    private static function setAtPath(array $root, array $path, string $value): array
    {
        if (count($path) === 0) {
            return $root;
        }
        $clone = $root;
        $cursor = &$clone;
        for ($i = 0; $i < count($path) - 1; $i++) {
            $key = $path[$i];
            $next = $cursor[$key] ?? [];
            $cursor[$key] = is_array($next) ? $next : [];
            $cursor = &$cursor[$key];
        }
        $cursor[$path[count($path) - 1]] = $value;
        unset($cursor);
        return $clone;
    }

    /**
     * @param array<string, mixed> $data
     * @param array<string, mixed>|null $context
     * @param list<string>|null $path
     * @return array{0: array<string, mixed>, 1: array<string, mixed>|null}
     */
    private static function withSchemaVersion(array $data, ?array $context, ?array $path, string $version, string $envelopeKey): array
    {
        if ($path === null || count($path) === 0) {
            return [$data, $context];
        }
        $head = $path[0];
        $rest = array_slice($path, 1);
        if ($head === $envelopeKey) {
            return [self::setAtPath($data, $rest, $version), $context];
        }
        if ($head === 'context') {
            $ctx = is_array($context) ? $context : [];
            return [$data, self::setAtPath($ctx, $rest, $version)];
        }
        return [$data, $context];
    }

    /**
     * @param array<string, mixed> $message
     * @param array<string, mixed> $options
     * @param array<string, mixed>|null $context
     * @return array<string, mixed>
     */
    private static function withOptionalFields(array $message, array $options, ?array $context): array
    {
        if (array_key_exists('anonymousId', $options)) {
            $message['anonymousId'] = $options['anonymousId'];
        }
        if (array_key_exists('timestamp', $options)) {
            $message['timestamp'] = $options['timestamp'];
        }
        if (array_key_exists('integrations', $options)) {
            $message['integrations'] = $options['integrations'];
        }
        if ($context !== null) {
            $message['context'] = $context;
        }
        return $message;
    }

    public static function identifyDefault(Client $client, string $userId, ?IdentifyDefault $traits = null, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($traits), $options['context'] ?? null, null, 'default', 'traits');
        $client->identify(self::withOptionalFields([
            'userId' => $userId,
            'traits' => $data,
        ], $options, $ctx));
    }

    public static function identify(Client $client, string $userId, ?IdentifyDefault $traits = null, array $options = []): void
    {
        self::identifyDefault($client, $userId, $traits, $options);
    }

    public static function trackCartViewedDefault(Client $client, string $userId, TrackCartViewedDefault $properties, array $options = []): void
    {
        [$data, $ctx] = self::withSchemaVersion(self::toMap($properties), $options['context'] ?? null, null, 'default', 'properties');
        $client->track(self::withOptionalFields([
            'userId' => $userId,
            'event' => 'Cart Viewed',
            'properties' => $data,
        ], $options, $ctx));
    }

    public static function trackCartViewed(Client $client, string $userId, TrackCartViewedDefault $properties, array $options = []): void
    {
        self::trackCartViewedDefault($client, $userId, $properties, $options);
    }
}


=== IdentifyDefault.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

class IdentifyDefault {
    /** @var mixed */
    public $email;
}


=== TrackCartViewedDefault.php ===
<?php

// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer ht-sdks/events-sdk-php v0.0.1 or later.
//
// Composer PSR-4 (do not edit the customer composer.json from generate):
//   "Hightouch\\\\Generated\\\\": "src/Hightouch/Generated/"

declare(strict_types=1);

namespace Hightouch\\Generated;

class TrackCartViewedDefault {
    /** @var mixed */
    public $amount;
    /** @var mixed */
    public $currency;
    /** @var mixed */
    public $itemCount;
}
"
`;
